students requested a latex template...

--- a/website/pr1.html
+++ b/website/pr1.html
@@ -114,6 +114,10 @@
 	  The archive <a href="pr1/examples.tar">examples.tar</a> contains example plots and plot scripts, as mentioned in the project assignment.
 	  This <a href="pr1/examples.zip">examples.zip</a> contains the same in ZIP format.
 	</li>
+	<li>
+	  <a href="pr1/itads2013-pr1-report-template.tex">LaTeX report template</a> without the images required to build it.
+	  You can use this in case you plan to write the report in LaTeX, but you can use any editor you like as long as you follow the same logical structure as shown on the PDF version.
+	</li>
       </ul>
       
     </div> <!-- content -->
