ok ready for tomorrow (haha! that is today my dear)

--- a/website/index.html
+++ b/website/index.html
@@ -131,7 +131,9 @@
           <a href="documents/itads2013-l5-group-activities.pdf">group activities for lecture 5</a>
 	</li>
 	<li>
-	  <b>under construction lecture 6</b> dynamic programming
+	  <a href="documents/itads2013-l6-dynamic-programming.pdf">lecture 6</a> dynamic programming<br>
+          <a href="documents/itads2013-l6-group-activities.pdf">group activities for lecture 6</a><br>
+          <a href="documents/itads2013-l6-a2-solution.pdf">solution of group activities 2</a>
 	</li>
 	<li>
 	  <b>under construction lecture 7</b> graphs
