--- a/website/schedule.html
+++ b/website/schedule.html
@@ -215,7 +215,11 @@
 	    <td rowspan="3">41</td>
 	    <td>tue oct  8  8h15-10h</td>
 	    <td>D415</td>
-	    <td><b>lecture 6</b> dynamic programming</td>
+	    <td>
+	      <a href="documents/itads2013-l6-dynamic-programming.pdf">lecture 6</a> dynamic programming<br>
+              <a href="documents/itads2013-l6-group-activities.pdf">group activities for lecture 6</a><br>
+              <a href="documents/itads2013-l6-a2-solution.pdf">solution of group activities 2</a>
+	    </td>
 	  </tr>
 	  <tr class="alt">
 	    <td>tue oct  8 13h15-15h</td>
