--- a/website/index.html
+++ b/website/index.html
@@ -136,7 +136,8 @@
           <a href="documents/itads2013-l6-a2-solution.pdf">solution of group activities 2</a>
 	</li>
 	<li>
-	  <b>under construction lecture 7</b> graphs
+	  <a href="documents/itads2013-l7-graphs.pdf">lecture 7</a> graphs<br>
+          <a href="documents/itads2013-l7-group-activities.pdf">group activities for lecture 7</a>
 	</li>
 	<li>
 	  <b>under construction lecture 8</b> review and exam preparation
