--- a/website/schedule.html
+++ b/website/schedule.html
@@ -236,7 +236,9 @@
 	    <td rowspan="3">42</td>
 	    <td>tue oct 15  8h15-10h</td>
 	    <td>D415</td>
-	    <td><b>lecture 7</b> graphs</td>
+	    <td>
+	      <a href="documents/itads2013-l7-graphs.pdf">lecture 7</a> graphs<br>
+              <a href="documents/itads2013-l7-group-activities.pdf">group activities for lecture 7</a>
 	  </tr>
 	  <tr>
 	    <td>tue oct 15 10h15-12h</td>
