some old edits...

--- a/website/ex6.html
+++ b/website/ex6.html
@@ -78,7 +78,7 @@
       </p>
       
       <p>
-	Download <a href="ex6/intheap.c">intheap.c</a> (a partial implementation of a max heap th\ at stores integers) and fill in the two missing functions:
+	Download <a href="ex6/intheap.c">intheap.c</a> (a partial implementation of a max heap that stores integers) and fill in the two missing functions:
       </p>
       
       <ol>
