--- a/website/index.html
+++ b/website/index.html
@@ -133,7 +133,7 @@
 	<li>
 	  <a href="documents/itads2013-l6-dynamic-programming.pdf">lecture 6</a> dynamic programming<br>
           <a href="documents/itads2013-l6-group-activities.pdf">group activities for lecture 6</a><br>
-          <a href="documents/itads2013-l6-a2-solution.pdf">solution of group activities 2</a>
+          <a href="documents/itads2013-l6-a2-solution.pdf">solution of lecture 6 group activity number 2</a>
 	</li>
 	<li>
 	  <a href="documents/itads2013-l7-graphs.pdf">lecture 7</a> graphs<br>
